Add CombinedPersonPredicateTest class